--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-debug-toolbar==1.0.1
 djorm-ext-pgarray==0.10
 djrill==0.9.0
 gunicorn==18.0
+newrelic==2.14.0.11
 psycopg2==2.5.2
 recaptcha-client==1.0.6
 requests==2.2.1
