--- a/requirements.txt
+++ b/requirements.txt
@@ -4,11 +4,13 @@ argparse==1.2.1
 backports.ssl-match-hostname==3.4.0.2
 dj-database-url==0.2.2
 django-debug-toolbar==1.0.1
+django-pylibmc-sasl==0.2.4
 djorm-ext-pgarray==0.10
 djrill==0.9.0
 gunicorn==18.0
 newrelic==2.14.0.11
 psycopg2==2.5.2
+pylibmc==1.2.3
 recaptcha-client==1.0.6
 requests==2.2.1
 sqlparse==0.1.11
