--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ djrill==0.9.0
 gunicorn==18.0
 psycopg2==2.5.2
 pylibmc==1.2.3
+pytz==2013.9
 recaptcha-client==1.0.6
 requests==2.2.1
 sqlparse==0.1.11
