--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,22 @@
-Django==1.6.2
+Django==1.6.3
 argparse==1.2.1
 backports.ssl-match-hostname==3.4.0.2
-dj-database-url==0.2.2
+dj-database-url==0.3.0
 django-appconf==0.6
 django-compressor==1.3
-django-debug-toolbar==1.0.1
+django-debug-toolbar==1.2
 django-pylibmc-sasl==0.2.4
+django-social-auth==0.7.28
 djorm-ext-pgarray==0.10
-djrill==0.9.0
+djrill==1.0.0
 gunicorn==18.0
+httplib2==0.9
 misaka==1.0.2
+oauth2==1.5.211
 psycopg2==2.5.2
-pylibmc==1.2.3
-pytz==2013.9
+pylibmc==1.3.0
+python-openid==2.2.5
+pytz==2014.2
 recaptcha-client==1.0.6
 requests==2.2.1
 six==1.6.1
