--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,13 @@
-Django==1.6.7
-argparse==1.2.1
-backports.ssl-match-hostname==3.4.0.2
+Django==1.8.19
 dj-database-url==0.3.0
-django-appconf==0.6
 django-compressor==1.4
 django-debug-toolbar==1.2.1
-django-pylibmc-sasl==0.2.4
-django-social-auth==0.7.28
+social-auth-app-django==1.2.0
 djorm-ext-pgarray==0.10
 djrill==1.0.0
-gunicorn==18.0
-httplib2==0.9
-misaka==1.0.2
-oauth2==1.5.211
-psycopg2==2.5.4
-pylibmc==1.3.0
+misaka==2.1.1
+oauth2==1.9.0.post1
+psycopg2==2.8.6
 python-openid==2.2.5
-pytz==2014.3
-recaptcha-client==1.0.6
-requests==2.3.0
-six==1.6.1
-sqlparse==0.1.11
-tornado==3.2.1
-wsgiref==0.1.2
+pytz==2022.6
+tornado==3.2.2
