Update to Python 3.10 and Django 3.2.18

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
-Django==1.8.19
-dj-database-url==0.3.0
-django-compressor==1.4
-django-debug-toolbar==1.2.1
-social-auth-app-django==1.2.0
-djorm-ext-pgarray==0.10
+cffi==1.17.1
+Django==3.2.18
+dj-database-url==0.5.0
+django-compressor==2.4
+django-debug-toolbar==3.2.4
+social-auth-app-django==4.0.0
 djrill==1.0.0
 misaka==2.1.1
 oauth2==1.9.0.post1
-psycopg2==2.8.6
+psycopg2==2.9.10
 python-openid==2.2.5
 pytz==2022.6
 tornado==3.2.2
